--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ influxdb-client = {extras = ["ciso"], version = "^1.29.1"}
 argparse = "^1.4.0"
 rich = "^12.4.4"
 konsole = "^0.7.0"
+requests = "^2.28.0"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
